--- a/src/main/resources/templates/fronted/orgindex.html
+++ b/src/main/resources/templates/fronted/orgindex.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/lib/layui/css/layui.css">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}">
+    <link rel="stylesheet" th:href="@{/lib/layui/css/layui.css}">
+    <style type="text/css">
+        .tupian {
+            float: left;
+            list-style: none;
+            padding: 40px;
+        }
+    </style>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
@@ -13,25 +19,15 @@
     <div class="layui-body">
         <ul>
             <tr th:each="o:${orgResult}">
+
                 <li class="tupian">
                     <div class="card">
+                        <p th:text="组织代码：+${.orgCode}"></p>
                         <a>
                             <div class="wall"><img th:src="${filePath+o.pic}" width="295px" height="166">
                             </div>
-                            <p th:text="${o.orgName}"></p>
-                            <!--<div>
-                                <div class="name"><p style="text-align: center; font-size: 20px"
-                                                     th:text="${s.p}"></p></div>
-                                <div class="price" style="margin-top: 10px"><i
-                                        style="float: left; font-size: 20px;margin-top: 8px;margin-right: 10px;"
-                                        class="layui-icon layui-icon-rmb"></i>
-                                    <p style="text-align: center; float: left; font-size: 30px; color: red;"
-                                       th:text="${s.price}"></p><a
-                                            th:href="@{/main/userproduce(userid=${s.userid},storename=${s.storename})}"
-                                            style="float: right;margin-right: 10px"
-                                            class="layui-btn layui-btn-primary layui-border-black">进入商家</a>
-                                </div>
-                            </div>-->
+
+                            <p th:text="组织名称+${o.orgName}"></p>
                         </a>
                     </div>
                 </li>
